<resources>
    <string name="app_name" translatable="false">Apkinson</string>
    <string name="databasename" translatable="false">apkinsondb</string>
    <string name="name">User name</string>
    <string name="ID">Telephone number</string>
    <string name="Login">LOGIN</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="sign_up">Create account</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hand">Dominant hand</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="smoker">Smoker</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="education">Education Level</string>
    <string name="tod">Year of diagnosis</string>
    <string name="todinput">Year</string>
    <string name="med">Medicine</string>
    <string name="med_name">Medicine name</string>
    <string name="med_dose">Dose (mg)</string>
    <string name="med_time">Intake time</string>
    <string name="other1">Do you have any speech or movement disorder?</string>
    <string name="___" translatable="false">------ ------ ------</string>
    <string name="start2">START</string>
    <string name="record">Record</string>
    <string name="a_ex">a</string>
    <string name="ddk_ex" translatable="false">ddk</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_long">Detailed Instructions</string>
    <string name="instructions_video">Video Demonstration</string>
    <string name="volume">Volume</string>
    <string name="ball_balance" translatable="false">Ball balance Game</string>
    <string name="tapping_ex">Tapping</string>
    <string name="tapping_1">one finger tapping</string>
    <string name="tapping_2">two finger tapping</string>
    <string name="sliding">Sliding</string>
    <string name="done">Done!</string>
    <string name="btnProfileText">Profile</string>
    <string name="btnSettingsText">Settings</string>
    <string name="btnExercisesText">Exercises</string>
    <string name="btnResultsText">Results</string>
    <string name="target">TARGET</string>
    <string name="thanks">Thank you!!!</string>
    <string name="results">See the results</string>
    <string name="birthdate">Birth date</string>
    <string name="language">Language</string>
    <string name="add">ADD</string>
    <string name="save_med">SAVE MEDICINE</string>
    <string name="update">UPDATE MEDICINE</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="user_empty">Please, fill username field</string>
    <string name="userid_empty">Please, fill telephone field</string>
    <string name="log_in">Log in successful</string>
    <string name="log_error">Username and/or User telephone not found</string>
    <string name="brith_date_error">Please, fill birth date</string>
    <string name="none_item">None</string>
    <string name="elem_item">Elementary school</string>
    <string name="high_item">High school</string>
    <string name="under_item">Undergraduate</string>
    <string name="post">Postgraduate</string>
    <string name="medicine_empty">Please, fill medicine name field</string>
    <string name="dose_empty">Please, fill dose field</string>
    <string name="add_medice_error">Medicine was already added</string>
    <string name="medicine_added">Added successful</string>
    <string name="time_diagnosis_error">Please, fill diagnosis time field</string>
    <string name="weight_error">Please, fill weight field</string>
    <string name="height_eror">Please, fill height field</string>
    <string name="again">Again</string>
    <string name="stop">Stop</string>
    <string name="session_start">Start First Exercise</string>
    <string name="session_continue">Start Next Exercise</string>
    <string name="session_finish">Back To Main Menu</string>
    <string name="exercise_start">Start Exercise</string>
    <string name="Session">Today\'s exercise</string>
    <string name="missing_permissions_title">Missing Permissions!</string>
    <string name="missing_permissions_text">You must grant permissions to record audio and write to storage to use the exercises!</string>
    <string name="OK">OK</string>
    <string name="user_name">Name: </string>
    <string name="user_id">Telephone: </string>
    <string name="S_record">Recorded sessions </string>
    <string name="Int_medicine">Medicine: </string>
    <string name="upd_medicine">Update medicine</string>
    <string name="add_medicine">ADD MEDICINE</string>
    <string name="delete">REMOVE</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="motivate">Good Job!!</string>
    <string name="Number_Taps">Number of Taps  </string>
    <string name="Time_Tapping_His">"Time  "</string>
    <string name="Finger_left">Left Finger</string>
    <string name="Finger_right">Right Finger</string>
    <string name="Hits_porcentage">Hits Percentage</string>
    <string name="Tapping_Time">Tapping Time </string>
    <string name="Positive_message">Good Job!! </string>
    <string name="Medium_message">Good Job!!   But, You can do it better</string>
    <string name="Negative_message">Let\'s improve!  Keep working</string>
    <string name="Empty">Empty</string>
    <string name="Title_notif">Make your therapy</string>
    <string name="Content_notif">Please remind your exercises today</string>
    <string name="title_notif_med">Take your medicine</string>
    <string name="content_notif_med">Remember to take your medicine: </string>
    <string name="session">Session </string>
    <string name="Perc_Tapping_Hits">% Taps </string>
    <string name="completed">You have finished a total of </string>
    <string name="keep">Keep doing your best </string>
    <string name="phonation">Phonation </string>
    <string name="jitter" translatable="false">Jitter (%) </string>
    <string name="shimmer">Shimmer (%)</string>
    <string name="articulation">Articulation </string>
    <string name="ddk_reg">DDK regularity (ms)</string>
    <string name="Speech">Speech</string>
    <string name="voiceRate" translatable="false">Voice Rate (%) </string>
    <string name="MaxEnergy" translatable="false">Max Energy (%) </string>
    <string name="energyVariability" translatable="false">Energy Variability (%) </string>
    <string name="jitterA" translatable="false">Jitter A (%) </string>
    <string name="jitterI" translatable="false">Jitter I (%) </string>
    <string name="jitterU" translatable="false">Jitter U (%)</string>
    <string name="shimmerA" translatable="false">Shimmer A (%) </string>
    <string name="shimmerI" translatable="false">Shimmer I (%) </string>
    <string name="shimmerU" translatable="false">Shimmer U (%) </string>
    <string name="prosody">Prosody </string>
    <string name="SpeechFT">Speech Features</string>
    <string name="movement">Movement</string>
    <string name="postural">Postural Tremor</string>
    <string name="Hand_left">Left Hand</string>
    <string name="Hand_right">Right Hand</string>
    <string name="TremorAmplitudeLeft">% Performance Left Hand</string>
    <string name="TremorAmplitudeRight">% Performance Right Hand</string>
    <string name="balance">Balancing</string>
    <string name="TremorAmplitude">% Performance</string>
    <string name="Completed_Exercises">Completed Exercises</string>
    <string name="update_profile">Update Profile</string>
    <string name="Notification_time">Time for notifications</string>
    <string name="export">Export Metadata</string>
    <string name="export_sucess">Metadata export was successful</string>
    <string name="export_failed">Metadata export failed</string>
    <string name="left_stability"> Stability Left Hand</string>
    <string name="right_stability"> Stability Right Hand</string>
    <string name="percentage">Percentage</string>
    <string name="F0">Fundamental Frequency</string>
    <string name="time">time [s]</string>
    <string name="frequency">frequency [Hz]</string>
    <string name="pronation">Hand Rotation</string>
    <string name="kinetic">Kinetic Tremor</string>
    <string name="circling">Circling</string>
    <string name="walking">Walking</string>
    <string name="perc_left_hand">Performance Left Hand</string>
    <string name="perc_right_hand">Performance Right Hand</string>
    <string name="scheduler">Change exercise scheduler</string>
    <string name="password">Password</string>
    <string name="daily_exercises">Daily Exercises</string>
    <string name="full_exercises">Full Exercises</string>
    <string name="wrong_pass">Wrong password</string>
    <string name="gaitGyroscope">Gait signal - Gyroscope</string>
    <string name="gaitAccelerometer">Gait signal - Accelerometer</string>
    <string name="voiceRateDDK1">Voice Rate Pataka (%)</string>
    <string name="voiceRateDDK2">Voice Rate Pakata (%)</string>
    <string name="voiceRateDDK3">Voice Rate Petaka (%)</string>
    <string name="MaxEnergyDDK1">Max Energy Pataka (%)</string>
    <string name="MaxEnergyDDK2">Max Energy Pakata (%)</string>
    <string name="MaxEnergyDDK3">Max Energy Petaka  (%)</string>
    <string name="DDK1">Pataka</string>
    <string name="DDK2">Pakata</string>
    <string name="DDK3">Petaka</string>
    <string name="tremor">Tremor</string>
    <string name="stability"> Stability</string>
    <string name="TremorLeft">% Left Hand</string>
    <string name="TremorRight">% Right Hand</string>
    <string name="gaitAccelerometerX">Acceleration X</string>
    <string name="gaitAccelerometerY">Acceleration Y</string>

</resources>
