<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_menu">

    <ImageButton
        android:id="@+id/button_ArtFt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:adjustViewBounds="true"
        android:background="@android:color/background_light"
        android:hapticFeedbackEnabled="true"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_results"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <ImageButton
        android:id="@+id/button_PhonFt"
        android:layout_margin="10sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@android:color/background_light"
        android:gravity="bottom|center_horizontal"
        android:hapticFeedbackEnabled="true"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <ImageButton
        android:id="@+id/button_ProsFt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="70dp"
        android:adjustViewBounds="true"
        android:background="@android:color/background_light"
        android:gravity="bottom|center_horizontal"
        android:hapticFeedbackEnabled="true"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_results"
        android:text="@string/btnExercisesText"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.51"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/textView_SpeechFt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:gravity="center"

        android:text="@string/SpeechFT"
        android:textSize="@dimen/menu_text_size"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/articulation"
        android:textSize="@dimen/menu_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_ArtFt"
        app:layout_constraintEnd_toEndOf="@+id/button_ArtFt"
        app:layout_constraintStart_toStartOf="@+id/button_ArtFt"/>

    <TextView
        android:id="@+id/txtSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/phonation"
        android:textSize="@dimen/menu_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_PhonFt"
        app:layout_constraintEnd_toEndOf="@+id/button_PhonFt"
        app:layout_constraintStart_toStartOf="@+id/button_PhonFt" />

    <TextView
        android:id="@+id/txtExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="60dp"
        android:text="@string/prosody"
        android:textSize="@dimen/menu_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_ProsFt"
        app:layout_constraintEnd_toEndOf="@+id/button_ProsFt"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="@+id/button_ProsFt" />


    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="Diagrama radar"
        android:layout_marginTop="10sp"
        android:textSize="@dimen/button_text_size"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/button_radar_speech"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExercises"/>


    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="10sp"
        android:textSize="@dimen/button_text_size"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/button_back_speech"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_radar_speech"/>



</android.support.constraint.ConstraintLayout>