<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:layout_gravity="center"
    >


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        tools:context="com.sma2.sma2.MainActivity">


        <TextView
            android:id="@+id/textViewResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/btnResultsText"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/bSpeech"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8sp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:hapticFeedbackEnabled="true"
            android:scaleType="fitCenter"
            android:src="@drawable/speech_results"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewResults"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/txtSpeech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/Speech"
            android:textSize="@dimen/menu_text_size"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/bSpeech"
            app:layout_constraintStart_toStartOf="@+id/bSpeech"
            app:layout_constraintTop_toBottomOf="@+id/bSpeech" />


        <ImageButton
            android:id="@+id/bTapping_one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8sp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:hapticFeedbackEnabled="true"
            android:scaleType="fitCenter"
            android:src="@drawable/bug"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewResults"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/txtTapping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/tapping_ex"
            android:textSize="@dimen/menu_text_size"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/bTapping_one"
            app:layout_constraintStart_toStartOf="@+id/bTapping_one"
            app:layout_constraintTop_toBottomOf="@+id/bTapping_one" />


        <ImageButton
            android:id="@+id/bPosturalTremor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8sp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/smartphone_extended_small"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSpeech"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/txtPosturalTremor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/postural"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/bPosturalTremor"
            app:layout_constraintStart_toStartOf="@+id/bPosturalTremor"
            app:layout_constraintTop_toBottomOf="@+id/bPosturalTremor" />


        <ImageButton
            android:id="@+id/bBalance"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8sp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/smartphone_balance"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTapping"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/txtBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/balance"
            android:textSize="23sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/bBalance"
            app:layout_constraintStart_toStartOf="@+id/bBalance"
            app:layout_constraintTop_toBottomOf="@+id/bBalance" />


        <ImageButton
            android:id="@+id/bRotation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8sp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/smartphone_rotation_icon_small"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPosturalTremor"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/txtRotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/pronation"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/bRotation"
            app:layout_constraintStart_toStartOf="@+id/bRotation"
            app:layout_constraintTop_toBottomOf="@+id/bRotation" />


        <ImageButton
            android:id="@+id/bKinetic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8sp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/smartphone_head_icon_small"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBalance"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/txtKinetic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/kinetic"
            android:textSize="23sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/bKinetic"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/bKinetic"
            app:layout_constraintTop_toBottomOf="@+id/bKinetic" />


        <ImageButton
            android:id="@+id/bCircling"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="28dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/smartphone_circling_small"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtKinetic"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/txtCircling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/circling"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/bCircling"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bCircling" />

        <ImageButton
            android:id="@+id/bWalking"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/walking_icon"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtKinetic"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/txtWalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/walking"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/bWalking"
            app:layout_constraintTop_toBottomOf="@+id/bWalking" />

        <Button
            android:id="@+id/button_back3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/back"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCircling"
            app:layout_constraintWidth_percent="0.7" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>